added: music amd text

--- a/src/app/scroll-section/scroll-section.component.html
+++ b/src/app/scroll-section/scroll-section.component.html
@@ -1,17 +1,18 @@
 <div class="ss">
   <div class="main"></div>
   <div class="ss__section ">
-    <h1>lucifer</h1>
+    <h1>Поздравляю с Новым 2025 годом!</h1>
   </div>
   <div class="ss__section ss__first">
-    <h1>Satan 6</h1>
+    <h1>Желаю чтобы все твои мечты сбывались и чтобы твои цели которые ты поставила на следующий год были достигнуты мгновенно</h1>
   </div>
   <div class="ss__section ss__second">
-    <h1 class="ss__title-second">Satan 6</h1>
+    <h1 class="ss__title-second">2024 год был насыщен всякими событиями которые на тебя подействовали но ты всё равно шла к своей цели безприкословно</h1>
   </div>
   <div class="ss__section">
-    <h1>Satan 6</h1>
+    <h1>Я в тебя верю что ты достигнешь своих целей, люблю тебя и обожаю❤️❤️❤️ желаю счастья и здоровья в новом 2025 году!</h1>
   </div>
+
 
   <div class="ss__section">
     <img src="full-moon.png" alt="" />
